# closed_kinematics_description

./: CMakeLists.txt  README.md  package.xml  tutorial_01.md
config/: closed_chain.yaml  open_chain.yaml  roki_joint_control.yaml
docs/: 04_pegasus_gazebo_plugins.md  pegasus_gazebo_plugins.md  tutorial_01.md
launch/: 01_open_xacro.launch  02_open_and_dummy_xacro.launch  03_closed_chain_on_gazebo.launch  04_pegasus_on_gazebo.launch  05_roki_servo.launch  closed_trans_spawn.launch  gazebo.launch  leg_l_controller.launch  open_chain_spawn.launch  open_trans_spawn.launch  reload.launch  spawn_closekinem_example.launch  spawn_ginko.launch  spawn_leg_l.launch  view_xacro.rviz
leg_l/: leg_l.sdf  leg_l.urdf  leg_l.urdf.xacro  robot.urdf.xacro
mashes/: link02_r_femoral.stl  link03_r_leg01.stl  link04_l_leg02.stl  link06_l_toe01.stl  link07_r_toe02.stl  link10_l_arm02.stl  link11_l_scissor01.stl  link12_l_scissor02.stl
meshes/: link00_chest.stl  link01_waist.stl  link03_l_leg01.stl  link04_r_leg02.stl  link05_l_knee.stl  link05_r_knee.stl  link06_r_toe01.stl  link07_l_toe02.stl  link08_r_toe03.stl  link09_l_arm01.stl  link09_r_arm01_.stl  link10_r_arm02.stl  link11_r_scissor01.stl  link12_r_scissor02.stl  urg.stl
scripts/: sdf_close.py  sdf_urdf_generator.sh
sdf/: leg_l.sdf  opened_urdf.sdf  simple_closed_chain.sdf  simple_closed_chain_open.sdf  simple_open_chain.sdf
urdf/: simple_closed_chain.urdf  simple_open_chain.urdf
worlds/: default.world
xacro/: 01_open_chain.xacro  02_open_chain_and_dummy_link.xacro  04_pegasus.xacro  05_roki_servo.xacro  (+1 more)
(+8 files in other folders)
